# Str2Num

./: .gitignore  CMakeLists.txt  LICENSE  README.md  str2num.h
.github/workflows/: cmake.yml
include/: str2num.h  str2num.hpp
test/: CMakeLists.txt  test_conversion.cpp  test_cpp_conversions.cpp  test_floating.hpp
